Sintatico/parser.output
Terminals unused in grammar

    ERRO


Grammar

    0 $accept: programa $end

    1 programa: declaracao_lista

    2 declaracao_lista: declaracao_lista declaracao
    3                 | declaracao

    4 declaracao: var_declaracao
    5           | fun_declaracao

    6 var_declaracao: tipo_especificador ID SEMICOLON
    7               | tipo_especificador ID OPENCOL NUM CLOSECOL SEMICOLON

    8 tipo_especificador: INT
    9                   | VOID

   10 fun_declaracao: tipo_especificador ID OPENPAR params CLOSEPAR composto_decl

   11 params: param_lista
   12       | VOID
   13       | ε

   14 param_lista: param_lista COMMA param
   15            | param

   16 param: tipo_especificador ID
   17      | tipo_especificador ID OPENCOL CLOSECOL

   18 composto_decl: OPENCHA local_declaracoes statement_lista CLOSECHA

   19 local_declaracoes: local_declaracoes var_declaracao
   20                  | ε

   21 statement_lista: statement_lista statement
   22                | ε

   23 statement: expressao_decl
   24          | composto_decl
   25          | selecao_decl
   26          | iteracao_decl
   27          | retorno_decl

   28 expressao_decl: expressao SEMICOLON
   29               | SEMICOLON

   30 selecao_decl: IF OPENPAR expressao CLOSEPAR statement
   31             | IF OPENPAR expressao CLOSEPAR statement ELSE statement

   32 iteracao_decl: WHILE OPENPAR expressao CLOSEPAR statement

   33 retorno_decl: RETURN SEMICOLON
   34             | RETURN expressao SEMICOLON

   35 expressao: var ASSIGN expressao
   36          | simples_expressao

   37 var: ID
   38    | ID OPENCOL expressao CLOSECOL

   39 simples_expressao: soma_expressao relacional soma_expressao
   40                  | soma_expressao

   41 relacional: LET
   42           | LT
   43           | GT
   44           | GET
   45           | EQ
   46           | DIF

   47 soma_expressao: soma_expressao ADD termo
   48               | soma_expressao SUB termo
   49               | termo

   50 termo: termo MUL fator
   51      | termo DIV fator
   52      | fator

   53 fator: OPENPAR expressao CLOSEPAR
   54      | var
   55      | ativacao
   56      | NUM

   57 ativacao: ID OPENPAR args CLOSEPAR

   58 args: arg_lista
   59     | ε

   60 arg_lista: arg_lista COMMA expressao
   61          | expressao


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IFX (258)
    ERRO (259)
    ADD (260) 47
    SUB (261) 48
    MUL (262) 50
    DIV (263) 51
    LT (264) 42
    LET (265) 41
    GET (266) 44
    GT (267) 43
    EQ (268) 45
    DIF (269) 46
    ASSIGN (270) 35
    SEMICOLON (271) 6 7 28 29 33 34
    COMMA (272) 14 60
    OPENPAR (273) 10 30 31 32 53 57
    CLOSEPAR (274) 10 30 31 32 53 57
    OPENCOL (275) 7 17 38
    CLOSECOL (276) 7 17 38
    OPENCHA (277) 18
    CLOSECHA (278) 18
    IF (279) 30 31
    ELSE (280) 31
    INT (281) 8
    RETURN (282) 33 34
    VOID (283) 9 12
    WHILE (284) 32
    NUM <number> (285) 7 56
    ID <string> (286) 6 7 10 16 17 37 38 57


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    programa <node> (33)
        on left: 1
        on right: 0
    declaracao_lista <node> (34)
        on left: 2 3
        on right: 1 2
    declaracao <node> (35)
        on left: 4 5
        on right: 2 3
    var_declaracao <node> (36)
        on left: 6 7
        on right: 4 19
    tipo_especificador <node> (37)
        on left: 8 9
        on right: 6 7 10 16 17
    fun_declaracao <node> (38)
        on left: 10
        on right: 5
    params <node> (39)
        on left: 11 12 13
        on right: 10
    param_lista <node> (40)
        on left: 14 15
        on right: 11 14
    param <node> (41)
        on left: 16 17
        on right: 14 15
    composto_decl <node> (42)
        on left: 18
        on right: 10 24
    local_declaracoes <node> (43)
        on left: 19 20
        on right: 18 19
    statement_lista <node> (44)
        on left: 21 22
        on right: 18 21
    statement <node> (45)
        on left: 23 24 25 26 27
        on right: 21 30 31 32
    expressao_decl <node> (46)
        on left: 28 29
        on right: 23
    selecao_decl <node> (47)
        on left: 30 31
        on right: 25
    iteracao_decl <node> (48)
        on left: 32
        on right: 26
    retorno_decl <node> (49)
        on left: 33 34
        on right: 27
    expressao <node> (50)
        on left: 35 36
        on right: 28 30 31 32 34 35 38 53 60 61
    var <node> (51)
        on left: 37 38
        on right: 35 54
    simples_expressao <node> (52)
        on left: 39 40
        on right: 36
    relacional <node> (53)
        on left: 41 42 43 44 45 46
        on right: 39
    soma_expressao <node> (54)
        on left: 47 48 49
        on right: 39 40 47 48
    termo <node> (55)
        on left: 50 51 52
        on right: 47 48 49 50 51
    fator <node> (56)
        on left: 53 54 55 56
        on right: 50 51 52
    ativacao <node> (57)
        on left: 57
        on right: 55
    args <node> (58)
        on left: 58 59
        on right: 57
    arg_lista <node> (59)
        on left: 60 61
        on right: 58 60


State 0

    0 $accept: • programa $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    programa            go to state 3
    declaracao_lista    go to state 4
    declaracao          go to state 5
    var_declaracao      go to state 6
    tipo_especificador  go to state 7
    fun_declaracao      go to state 8


State 1

    8 tipo_especificador: INT •

    $default  reduce using rule 8 (tipo_especificador)


State 2

    9 tipo_especificador: VOID •

    $default  reduce using rule 9 (tipo_especificador)


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 9


State 4

    1 programa: declaracao_lista •
    2 declaracao_lista: declaracao_lista • declaracao

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (programa)

    declaracao          go to state 10
    var_declaracao      go to state 6
    tipo_especificador  go to state 7
    fun_declaracao      go to state 8


State 5

    3 declaracao_lista: declaracao •

    $default  reduce using rule 3 (declaracao_lista)


State 6

    4 declaracao: var_declaracao •

    $default  reduce using rule 4 (declaracao)


State 7

    6 var_declaracao: tipo_especificador • ID SEMICOLON
    7               | tipo_especificador • ID OPENCOL NUM CLOSECOL SEMICOLON
   10 fun_declaracao: tipo_especificador • ID OPENPAR params CLOSEPAR composto_decl

    ID  shift, and go to state 11


State 8

    5 declaracao: fun_declaracao •

    $default  reduce using rule 5 (declaracao)


State 9

    0 $accept: programa $end •

    $default  accept


State 10

    2 declaracao_lista: declaracao_lista declaracao •

    $default  reduce using rule 2 (declaracao_lista)


State 11

    6 var_declaracao: tipo_especificador ID • SEMICOLON
    7               | tipo_especificador ID • OPENCOL NUM CLOSECOL SEMICOLON
   10 fun_declaracao: tipo_especificador ID • OPENPAR params CLOSEPAR composto_decl

    SEMICOLON  shift, and go to state 12
    OPENPAR    shift, and go to state 13
    OPENCOL    shift, and go to state 14


State 12

    6 var_declaracao: tipo_especificador ID SEMICOLON •

    $default  reduce using rule 6 (var_declaracao)


State 13

   10 fun_declaracao: tipo_especificador ID OPENPAR • params CLOSEPAR composto_decl

    INT   shift, and go to state 1
    VOID  shift, and go to state 15

    $default  reduce using rule 13 (params)

    tipo_especificador  go to state 16
    params              go to state 17
    param_lista         go to state 18
    param               go to state 19


State 14

    7 var_declaracao: tipo_especificador ID OPENCOL • NUM CLOSECOL SEMICOLON

    NUM  shift, and go to state 20


State 15

    9 tipo_especificador: VOID •
   12 params: VOID •

    CLOSEPAR  reduce using rule 12 (params)
    $default  reduce using rule 9 (tipo_especificador)


State 16

   16 param: tipo_especificador • ID
   17      | tipo_especificador • ID OPENCOL CLOSECOL

    ID  shift, and go to state 21


State 17

   10 fun_declaracao: tipo_especificador ID OPENPAR params • CLOSEPAR composto_decl

    CLOSEPAR  shift, and go to state 22


State 18

   11 params: param_lista •
   14 param_lista: param_lista • COMMA param

    COMMA  shift, and go to state 23

    $default  reduce using rule 11 (params)


State 19

   15 param_lista: param •

    $default  reduce using rule 15 (param_lista)


State 20

    7 var_declaracao: tipo_especificador ID OPENCOL NUM • CLOSECOL SEMICOLON

    CLOSECOL  shift, and go to state 24


State 21

   16 param: tipo_especificador ID •
   17      | tipo_especificador ID • OPENCOL CLOSECOL

    OPENCOL  shift, and go to state 25

    $default  reduce using rule 16 (param)


State 22

   10 fun_declaracao: tipo_especificador ID OPENPAR params CLOSEPAR • composto_decl

    OPENCHA  shift, and go to state 26

    composto_decl  go to state 27


State 23

   14 param_lista: param_lista COMMA • param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    tipo_especificador  go to state 16
    param               go to state 28


State 24

    7 var_declaracao: tipo_especificador ID OPENCOL NUM CLOSECOL • SEMICOLON

    SEMICOLON  shift, and go to state 29


State 25

   17 param: tipo_especificador ID OPENCOL • CLOSECOL

    CLOSECOL  shift, and go to state 30


State 26

   18 composto_decl: OPENCHA • local_declaracoes statement_lista CLOSECHA

    $default  reduce using rule 20 (local_declaracoes)

    local_declaracoes  go to state 31


State 27

   10 fun_declaracao: tipo_especificador ID OPENPAR params CLOSEPAR composto_decl •

    $default  reduce using rule 10 (fun_declaracao)


State 28

   14 param_lista: param_lista COMMA param •

    $default  reduce using rule 14 (param_lista)


State 29

    7 var_declaracao: tipo_especificador ID OPENCOL NUM CLOSECOL SEMICOLON •

    $default  reduce using rule 7 (var_declaracao)


State 30

   17 param: tipo_especificador ID OPENCOL CLOSECOL •

    $default  reduce using rule 17 (param)


State 31

   18 composto_decl: OPENCHA local_declaracoes • statement_lista CLOSECHA
   19 local_declaracoes: local_declaracoes • var_declaracao

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 22 (statement_lista)

    var_declaracao      go to state 32
    tipo_especificador  go to state 33
    statement_lista     go to state 34


State 32

   19 local_declaracoes: local_declaracoes var_declaracao •

    $default  reduce using rule 19 (local_declaracoes)


State 33

    6 var_declaracao: tipo_especificador • ID SEMICOLON
    7               | tipo_especificador • ID OPENCOL NUM CLOSECOL SEMICOLON

    ID  shift, and go to state 35


State 34

   18 composto_decl: OPENCHA local_declaracoes statement_lista • CLOSECHA
   21 statement_lista: statement_lista • statement

    SEMICOLON  shift, and go to state 36
    OPENPAR    shift, and go to state 37
    OPENCHA    shift, and go to state 26
    CLOSECHA   shift, and go to state 38
    IF         shift, and go to state 39
    RETURN     shift, and go to state 40
    WHILE      shift, and go to state 41
    NUM        shift, and go to state 42
    ID         shift, and go to state 43

    composto_decl      go to state 44
    statement          go to state 45
    expressao_decl     go to state 46
    selecao_decl       go to state 47
    iteracao_decl      go to state 48
    retorno_decl       go to state 49
    expressao          go to state 50
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 35

    6 var_declaracao: tipo_especificador ID • SEMICOLON
    7               | tipo_especificador ID • OPENCOL NUM CLOSECOL SEMICOLON

    SEMICOLON  shift, and go to state 12
    OPENCOL    shift, and go to state 14


State 36

   29 expressao_decl: SEMICOLON •

    $default  reduce using rule 29 (expressao_decl)


State 37

   53 fator: OPENPAR • expressao CLOSEPAR

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    expressao          go to state 57
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 38

   18 composto_decl: OPENCHA local_declaracoes statement_lista CLOSECHA •

    $default  reduce using rule 18 (composto_decl)


State 39

   30 selecao_decl: IF • OPENPAR expressao CLOSEPAR statement
   31             | IF • OPENPAR expressao CLOSEPAR statement ELSE statement

    OPENPAR  shift, and go to state 58


State 40

   33 retorno_decl: RETURN • SEMICOLON
   34             | RETURN • expressao SEMICOLON

    SEMICOLON  shift, and go to state 59
    OPENPAR    shift, and go to state 37
    NUM        shift, and go to state 42
    ID         shift, and go to state 43

    expressao          go to state 60
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 41

   32 iteracao_decl: WHILE • OPENPAR expressao CLOSEPAR statement

    OPENPAR  shift, and go to state 61


State 42

   56 fator: NUM •

    $default  reduce using rule 56 (fator)


State 43

   37 var: ID •
   38    | ID • OPENCOL expressao CLOSECOL
   57 ativacao: ID • OPENPAR args CLOSEPAR

    OPENPAR  shift, and go to state 62
    OPENCOL  shift, and go to state 63

    $default  reduce using rule 37 (var)


State 44

   24 statement: composto_decl •

    $default  reduce using rule 24 (statement)


State 45

   21 statement_lista: statement_lista statement •

    $default  reduce using rule 21 (statement_lista)


State 46

   23 statement: expressao_decl •

    $default  reduce using rule 23 (statement)


State 47

   25 statement: selecao_decl •

    $default  reduce using rule 25 (statement)


State 48

   26 statement: iteracao_decl •

    $default  reduce using rule 26 (statement)


State 49

   27 statement: retorno_decl •

    $default  reduce using rule 27 (statement)


State 50

   28 expressao_decl: expressao • SEMICOLON

    SEMICOLON  shift, and go to state 64


State 51

   35 expressao: var • ASSIGN expressao
   54 fator: var •

    ASSIGN  shift, and go to state 65

    $default  reduce using rule 54 (fator)


State 52

   36 expressao: simples_expressao •

    $default  reduce using rule 36 (expressao)


State 53

   39 simples_expressao: soma_expressao • relacional soma_expressao
   40                  | soma_expressao •
   47 soma_expressao: soma_expressao • ADD termo
   48               | soma_expressao • SUB termo

    ADD  shift, and go to state 66
    SUB  shift, and go to state 67
    LT   shift, and go to state 68
    LET  shift, and go to state 69
    GET  shift, and go to state 70
    GT   shift, and go to state 71
    EQ   shift, and go to state 72
    DIF  shift, and go to state 73

    $default  reduce using rule 40 (simples_expressao)

    relacional  go to state 74


State 54

   49 soma_expressao: termo •
   50 termo: termo • MUL fator
   51      | termo • DIV fator

    MUL  shift, and go to state 75
    DIV  shift, and go to state 76

    $default  reduce using rule 49 (soma_expressao)


State 55

   52 termo: fator •

    $default  reduce using rule 52 (termo)


State 56

   55 fator: ativacao •

    $default  reduce using rule 55 (fator)


State 57

   53 fator: OPENPAR expressao • CLOSEPAR

    CLOSEPAR  shift, and go to state 77


State 58

   30 selecao_decl: IF OPENPAR • expressao CLOSEPAR statement
   31             | IF OPENPAR • expressao CLOSEPAR statement ELSE statement

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    expressao          go to state 78
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 59

   33 retorno_decl: RETURN SEMICOLON •

    $default  reduce using rule 33 (retorno_decl)


State 60

   34 retorno_decl: RETURN expressao • SEMICOLON

    SEMICOLON  shift, and go to state 79


State 61

   32 iteracao_decl: WHILE OPENPAR • expressao CLOSEPAR statement

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    expressao          go to state 80
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 62

   57 ativacao: ID OPENPAR • args CLOSEPAR

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    $default  reduce using rule 59 (args)

    expressao          go to state 81
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56
    args               go to state 82
    arg_lista          go to state 83


State 63

   38 var: ID OPENCOL • expressao CLOSECOL

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    expressao          go to state 84
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 64

   28 expressao_decl: expressao SEMICOLON •

    $default  reduce using rule 28 (expressao_decl)


State 65

   35 expressao: var ASSIGN • expressao

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    expressao          go to state 85
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 66

   47 soma_expressao: soma_expressao ADD • termo

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    var       go to state 86
    termo     go to state 87
    fator     go to state 55
    ativacao  go to state 56


State 67

   48 soma_expressao: soma_expressao SUB • termo

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    var       go to state 86
    termo     go to state 88
    fator     go to state 55
    ativacao  go to state 56


State 68

   42 relacional: LT •

    $default  reduce using rule 42 (relacional)


State 69

   41 relacional: LET •

    $default  reduce using rule 41 (relacional)


State 70

   44 relacional: GET •

    $default  reduce using rule 44 (relacional)


State 71

   43 relacional: GT •

    $default  reduce using rule 43 (relacional)


State 72

   45 relacional: EQ •

    $default  reduce using rule 45 (relacional)


State 73

   46 relacional: DIF •

    $default  reduce using rule 46 (relacional)


State 74

   39 simples_expressao: soma_expressao relacional • soma_expressao

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    var             go to state 86
    soma_expressao  go to state 89
    termo           go to state 54
    fator           go to state 55
    ativacao        go to state 56


State 75

   50 termo: termo MUL • fator

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    var       go to state 86
    fator     go to state 90
    ativacao  go to state 56


State 76

   51 termo: termo DIV • fator

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    var       go to state 86
    fator     go to state 91
    ativacao  go to state 56


State 77

   53 fator: OPENPAR expressao CLOSEPAR •

    $default  reduce using rule 53 (fator)


State 78

   30 selecao_decl: IF OPENPAR expressao • CLOSEPAR statement
   31             | IF OPENPAR expressao • CLOSEPAR statement ELSE statement

    CLOSEPAR  shift, and go to state 92


State 79

   34 retorno_decl: RETURN expressao SEMICOLON •

    $default  reduce using rule 34 (retorno_decl)


State 80

   32 iteracao_decl: WHILE OPENPAR expressao • CLOSEPAR statement

    CLOSEPAR  shift, and go to state 93


State 81

   61 arg_lista: expressao •

    $default  reduce using rule 61 (arg_lista)


State 82

   57 ativacao: ID OPENPAR args • CLOSEPAR

    CLOSEPAR  shift, and go to state 94


State 83

   58 args: arg_lista •
   60 arg_lista: arg_lista • COMMA expressao

    COMMA  shift, and go to state 95

    $default  reduce using rule 58 (args)


State 84

   38 var: ID OPENCOL expressao • CLOSECOL

    CLOSECOL  shift, and go to state 96


State 85

   35 expressao: var ASSIGN expressao •

    $default  reduce using rule 35 (expressao)


State 86

   54 fator: var •

    $default  reduce using rule 54 (fator)


State 87

   47 soma_expressao: soma_expressao ADD termo •
   50 termo: termo • MUL fator
   51      | termo • DIV fator

    MUL  shift, and go to state 75
    DIV  shift, and go to state 76

    $default  reduce using rule 47 (soma_expressao)


State 88

   48 soma_expressao: soma_expressao SUB termo •
   50 termo: termo • MUL fator
   51      | termo • DIV fator

    MUL  shift, and go to state 75
    DIV  shift, and go to state 76

    $default  reduce using rule 48 (soma_expressao)


State 89

   39 simples_expressao: soma_expressao relacional soma_expressao •
   47 soma_expressao: soma_expressao • ADD termo
   48               | soma_expressao • SUB termo

    ADD  shift, and go to state 66
    SUB  shift, and go to state 67

    $default  reduce using rule 39 (simples_expressao)


State 90

   50 termo: termo MUL fator •

    $default  reduce using rule 50 (termo)


State 91

   51 termo: termo DIV fator •

    $default  reduce using rule 51 (termo)


State 92

   30 selecao_decl: IF OPENPAR expressao CLOSEPAR • statement
   31             | IF OPENPAR expressao CLOSEPAR • statement ELSE statement

    SEMICOLON  shift, and go to state 36
    OPENPAR    shift, and go to state 37
    OPENCHA    shift, and go to state 26
    IF         shift, and go to state 39
    RETURN     shift, and go to state 40
    WHILE      shift, and go to state 41
    NUM        shift, and go to state 42
    ID         shift, and go to state 43

    composto_decl      go to state 44
    statement          go to state 97
    expressao_decl     go to state 46
    selecao_decl       go to state 47
    iteracao_decl      go to state 48
    retorno_decl       go to state 49
    expressao          go to state 50
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 93

   32 iteracao_decl: WHILE OPENPAR expressao CLOSEPAR • statement

    SEMICOLON  shift, and go to state 36
    OPENPAR    shift, and go to state 37
    OPENCHA    shift, and go to state 26
    IF         shift, and go to state 39
    RETURN     shift, and go to state 40
    WHILE      shift, and go to state 41
    NUM        shift, and go to state 42
    ID         shift, and go to state 43

    composto_decl      go to state 44
    statement          go to state 98
    expressao_decl     go to state 46
    selecao_decl       go to state 47
    iteracao_decl      go to state 48
    retorno_decl       go to state 49
    expressao          go to state 50
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 94

   57 ativacao: ID OPENPAR args CLOSEPAR •

    $default  reduce using rule 57 (ativacao)


State 95

   60 arg_lista: arg_lista COMMA • expressao

    OPENPAR  shift, and go to state 37
    NUM      shift, and go to state 42
    ID       shift, and go to state 43

    expressao          go to state 99
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 96

   38 var: ID OPENCOL expressao CLOSECOL •

    $default  reduce using rule 38 (var)


State 97

   30 selecao_decl: IF OPENPAR expressao CLOSEPAR statement •
   31             | IF OPENPAR expressao CLOSEPAR statement • ELSE statement

    ELSE  shift, and go to state 100

    $default  reduce using rule 30 (selecao_decl)


State 98

   32 iteracao_decl: WHILE OPENPAR expressao CLOSEPAR statement •

    $default  reduce using rule 32 (iteracao_decl)


State 99

   60 arg_lista: arg_lista COMMA expressao •

    $default  reduce using rule 60 (arg_lista)


State 100

   31 selecao_decl: IF OPENPAR expressao CLOSEPAR statement ELSE • statement
